Fixed radar being hidden under map background

--- a/stylesheets/components/_map.scss
+++ b/stylesheets/components/_map.scss
@@ -14,4 +14,5 @@
   float: left;
   width: 40%;
   z-index: 2;
+  position: relative;
 }
